# buildbtw

./: .editorconfig  .env.example  .gitattributes  .gitignore  .gitlab-ci.yml  .rustfmt.toml  Cargo.toml  Containerfile  Justfile  README.md  REUSE.toml  build.rs
.cargo/: audit.toml  config.toml  deny.toml
.gitlab/issue_templates/: Packaging User Survey.md  PoC User Test Onboarding.md
LICENSES/: 0BSD.txt
arch-pkg-repo-updater/: Cargo.toml
arch-pkg-repo-updater/src/: args.rs  lib.rs  state.rs  tracing.rs
benches/: global_dependency_graph.rs
buildbtw-poc/: .gitlab-ci.yml  Cargo.toml  Containerfile  Justfile  README.md  build.rs
buildbtw-poc/assets/: main.css
buildbtw-poc/benches/: global_dependency_graph.rs
buildbtw-poc/infrastructure/: build-inside-vm.sh  buildbtw-executor.sh  deploy-server.sh
buildbtw-poc/migrations/: 20250109112544_add_gitlab_pipelines.sql  20250328140011_gitlab_pipeline_architecture.sql  20250520162658_string_uuids.sql  20250523154302_gitlab_pipeline_url.sql  20250630111346_reset-build-graphs.sql
buildbtw-poc/src/: api.rs  build_package.rs  build_set_graph.rs  git.rs  iteration.rs  lib.rs  pacman_repo.rs  source_info.rs  source_repos.rs  tracing.rs
buildbtw-poc/src/gitlab/: mod.rs
buildbtw-poc/templates/: base.jinja  home.jinja  layout.jinja  list_build_namespaces.jinja  render_build_namespace_graph.jinja  show_build_namespace.jinja
infrastructure/: build-inside-vm  buildbtw-executor  buildbtw-executor.sh  deploy-server
migrations/: 20241118121044_init.sql  20241127154008_build_namespaces.sql  20241211132328_add_iterations.sql  20250120154639_build_namespace_status.sql  20250326095128_wipe_build_namespaces.sql
notes/: 2024-11-24-arch-summit-discussion.md  2024-arch-summit-talk.md  2025-01-08 background task diagram.excalidraw  Buildbot.md  PoC Deployment.md  PoC User Guide.md  PoC_Deployment.md  PoC_User_Guide.md  Prior Art.md  Technology.md  release-queue-2022-04-01.excalidraw
notes/2024-arch-summit-talk/: talk.md
src/: build_package.rs  build_set_graph.rs  git.rs  gitlab.rs  iteration.rs  lib.rs  pacman_repo.rs  source_info.rs  tracing.rs  worker.rs
src/gitlab/: gitlab_changed_projects.graphql  mod.rs
templates/: build_namespace.jinja  layout.jinja  list_build_namespaces.jinja  render_build_namespace.jinja  show_build_namespace.jinja
