[package]
name = "buildbtw"
version = "0.1.0"
edition = "2021"

[features]
fake-pkgbuild = []

[dependencies]
alpm-srcinfo = { git = "https://gitlab.archlinux.org/archlinux/alpm/alpm.git", branch = "main" }
alpm-types = { git = "https://gitlab.archlinux.org/archlinux/alpm/alpm.git", branch = "main" }
anyhow = { version = "1.0.95", features = ["backtrace"] }
axum = { version = "0.8.1", features = ["http2", "macros"] }
axum-extra = "0.10.0"
axum-server = "0.7.1"
camino = { version = "1.1.9", features = ["serde", "serde1"] }
clap = { version = "4.5.26", features = [
    "cargo",
    "derive",
    "env",
    "wrap_help",
] }
colored = "3.0.0"
console-subscriber = "0.4.1"
criterion = { version = "0.5.1" }
derive_more = { version = "2.0.1", features = ["as_ref", "display"] }
git2 = "0.20.0"
gitlab = "0.1707.0"
graphql_client = "0.14.0"
layout-rs = { version = "0.1.2", features = ["log"] }
listenfd = "1.0.1"
minijinja = "2.6.0"
petgraph = { version = "0.7.1", features = [
    "serde",
    "serde-1",
    "serde_derive",
] }
redact = "0.1.10"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["serde_derive"] }
serde_json = { version = "1.0.135", features = ["raw_value"] }
sqlx = { version = "0.8.3", features = [
    "sqlite",
    "runtime-tokio",
    "uuid",
    "json",
    "time",
] }
strum = { version = "0.27.1", features = ["derive"] }
time = { version = "0.3.37", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1.43.0", features = [
    "fs",
    "rt-multi-thread",
    "process",
    "tracing",
] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.12.0", features = ["serde", "v4"] }

[dev-dependencies]
rstest = "0.24.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }

[[bench]]
name = "global_dependency_graph"
harness = false
