[workspace.package]
authors = [
    "Levente Polyak <anthraxx@archlinux.org>",
    "Rafael Epplée <raffomania@archlinux.org>",
    "Sven-Hendrik Haase <svenstaro@archlinux.org>",
]
edition = "2024"
homepage = "https://gitlab.archlinux.org/archlinux/buildbtw"
keywords = ["arch", "linux", "packaging", "ci", "building", "graph"]
license = "GPL-3.0-or-later"
repository = "https://gitlab.archlinux.org/archlinux/alpm/alpm"

[workspace]
members = [
    "arch-pkg-repo-updater",
    "buildbtw-poc",
]
# We need to set resolver explicitly since this is a virtual workspace.
# See https://doc.rust-lang.org/cargo/reference/workspaces.html#virtual-workspace
resolver = "3"

[workspace.dependencies]
alpm-srcinfo = { git = "https://gitlab.archlinux.org/archlinux/alpm/alpm.git", branch = "main" }
alpm-types = { git = "https://gitlab.archlinux.org/archlinux/alpm/alpm.git", branch = "main" }
anyhow = { version = "1.0.95", features = ["backtrace"] }
buildbtw-poc = { path = "./buildbtw-poc", version = "0.1.0" }
clap = { version = "4.5.26", features = [
    "cargo",
    "derive",
    "env",
    "wrap_help",
] }
colored = "3.0.0"
console-subscriber = "0.4.1"
directories = "6.0.0"
gitlab = "0.1800.0"
redact = "0.1.10"
rstest = "0.25.0"
serde = { version = "1.0.217", features = ["serde_derive"] }
serde_json = { version = "1.0.135", features = ["raw_value"] }
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.43.0", features = [
    "fs",
    "macros",
    "process",
    "rt-multi-thread",
    "tracing",
] }
toml = "0.8.23"
time = { version = "0.3.37", features = ["formatting", "parsing", "serde"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
