[package]
authors.workspace = true
description = "Arch Linux packaging Git repository updater"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "arch-pkg-repo-updater"
repository.workspace = true
version = "0.0.1"

[dependencies]
anyhow.workspace = true
buildbtw-poc.workspace = true
clap.workspace = true
console-subscriber.workspace = true
directories.workspace = true
gitlab.workspace = true
redact.workspace = true
serde.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
toml.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }
