[package]
authors.workspace = true
description = "Service for building new versions of packages (proof-of-concept)"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "buildbtw-poc"
repository.workspace = true
version = "0.1.0"

[features]
fake-pkgbuild = []

[dependencies]
alpm-srcinfo.workspace = true
alpm-types.workspace = true
anyhow.workspace = true
axum = { version = "0.8.1", features = ["http2", "macros"] }
axum-extra = "0.10.0"
axum-server = "0.7.1"
camino = { version = "1.1.9", features = ["serde", "serde1"] }
clap.workspace = true
colored.workspace = true
console-subscriber = "0.4.1"
criterion = { version = "0.6" }
derive_more = { version = "2.0.1", features = ["as_ref", "display"] }
futures = "0.3.31"
git2 = "0.20.0"
gitlab = "0.1800.0"
graphql_client = "0.14.0"
layout-rs = { version = "0.1.2", features = ["log"] }
listenfd = "1.0.1"
minijinja = { version = "2.6.0", features = ["loader"] }
petgraph = { version = "0.8.1", features = [
    "serde",
    "serde-1",
    "serde_derive",
] }
redact = "0.1.10"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json", "stream"] }
serde.workspace = true
serde_json.workspace = true
sqlx = { version = "0.8.3", features = [
    "sqlite",
    "runtime-tokio",
    "uuid",
    "json",
    "time",
] }
strum.workspace = true
thiserror.workspace = true
time = { version = "0.3.37", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1.43.0", features = [
    "fs",
    "rt-multi-thread",
    "process",
    "tracing",
] }
tower-http = { version = "0.6.2", features = ["trace", "fs"] }
tokio-util = "0.7.14"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.12.0", features = ["serde", "v4"] }
rust-embed = "8.7.0"
mime_guess = "2.0.5"
url = "2.5.4"

[dev-dependencies]
rstest.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }

[[bench]]
name = "global_dependency_graph"
harness = false
